исправлена ссылка JS for Beginners в сайдбаре

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script>
     window.$docsify = {
       name: 'JS for Beginners',
+      nameLink: '#/',
       repo: '',
       loadSidebar: true,
       subMaxLevel: 2,
